force-app/main/default/objects/Lead/fields/CountryISOCode2__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode2__c</fullName>
    <description>Store the country ISO code 2.</description>
    <label>CountryISOCode2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>