force-app/main/default/objects/Lead/fields/CountryISOCode3__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode3__c</fullName>
    <description>Stores Country ISO code 3.</description>
    <label>CountryISOCode3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>