force-app/main/default/objects/Lead/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>